Format time zone name using ICU instead of platform calls https://bugs.webkit.org/show_bug.cgi?id=239865

Reviewed by Yusuke Suzuki.

JSTests:

Added new tests that ensure Date's timezone is formatted using preferred
language.

* complex.yaml:
* complex/timezone-format-de.js: Added.
(shouldBe):
* complex/timezone-format-en.js: Added.
(shouldBe):

Source/JavaScriptCore:

formatDateTime now uses cached display name of the timezone.

* runtime/DateConstructor.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):
* runtime/DateConversion.cpp:
(JSC::formatDateTime):
* runtime/DateConversion.h:
* runtime/DatePrototype.cpp:
(JSC::formateDateInstance):
* runtime/JSDateMath.cpp:
(JSC::toICUTimeZone): Encapsulate bitwise_cast into typesafe functions.
(JSC::toOpaqueICUTimeZone):
(JSC::OpaqueICUTimeZoneDeleter::operator()):
(JSC::DateCache::calculateLocalTimeOffset):
(JSC::DateCache::defaultTimeZone):
(JSC::DateCache::timeZoneDisplayName): Both standard and daylight names are computed
once on the first access as ICU methods internally acquire locks.
(JSC::DateCache::timeZoneCacheSlow):
(JSC::DateCache::resetIfNecessary):
* runtime/JSDateMath.h:

LayoutTests:

Rebased existing layout tests to reflect new format (which is the same as in other
browsers now).

* storage/indexeddb/modern/date-basic-expected.txt:
* storage/indexeddb/modern/date-basic-private-expected.txt:
* storage/indexeddb/modern/get-keyrange-expected.txt:
* storage/indexeddb/modern/get-keyrange-private-expected.txt:
* storage/indexeddb/modern/idbobjectstore-delete-1-expected.txt:
* storage/indexeddb/modern/idbobjectstore-delete-1-private-expected.txt:

Canonical link: https://commits.webkit.org/250131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293625 268f45cc-cd09-0410-ab3c-d52691b4dbfc