Source/JavaScriptCore/runtime/DateConversion.cpp
@@ -30,10 +30,6 @@
 #include <wtf/text/StringBuilder.h>
 #include <wtf/text/WTFString.h>
 
-#if OS(WINDOWS)
-#include <windows.h>
-#endif
-
 namespace JSC {
 
 template<int width>
@@ -58,7 +54,7 @@ void appendNumber<2>(StringBuilder& builder, int value)
     builder.append(static_cast<char>('0' + value % 10));
 }
 
-String formatDateTime(const GregorianDateTime& t, DateTimeFormat format, bool asUTCVariant)
+String formatDateTime(const GregorianDateTime& t, DateTimeFormat format, bool asUTCVariant, DateCache& dateCache)
 {
     bool appendDate = format & DateTimeFormatDate;
     bool appendTime = format & DateTimeFormatTime;
@@ -96,18 +92,8 @@ String formatDateTime(const GregorianDateTime& t, DateTimeFormat format, bool as
             builder.append(t.utcOffsetInMinute() < 0 ? '-' : '+');
             appendNumber<2>(builder, offset / 60);
             appendNumber<2>(builder, offset % 60);
-
-#if OS(WINDOWS)
-            TIME_ZONE_INFORMATION timeZoneInformation;
-            GetTimeZoneInformation(&timeZoneInformation);
-            const WCHAR* winTimeZoneName = t.isDST() ? timeZoneInformation.DaylightName : timeZoneInformation.StandardName;
-            String timeZoneName(winTimeZoneName);
-#else
-            struct tm gtm = t;
-            char timeZoneName[70];
-            strftime(timeZoneName, sizeof(timeZoneName), "%Z", &gtm);
-#endif
-            if (timeZoneName[0])
+            String timeZoneName = dateCache.timeZoneDisplayName(t.isDST());
+            if (!timeZoneName.isEmpty())
                 builder.append(" (", timeZoneName, ')');
         }
     }
